# dnd_scribe

./: .gitignore  AGENTS.md  README.md  build.gradle  gradle.properties  settings.gradle  todo.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: index.html  index_old.html
app/src/main/java/com/example/dndscribe/: MainActivity.java  MainActivity.kt
app/src/main/java/com/example/dndscribe/data/local/: AppDatabase.kt  SessionDao.kt  SessionEntity.kt
app/src/main/java/com/example/dndscribe/data/remote/: AiSessionClient.kt  CloudApi.kt  LlmApi.kt  RetrofitClient.kt  TtsApi.kt  WhisperApi.kt
app/src/main/java/com/example/dndscribe/data/repository/: ActiveSessionRepository.kt  CloudSyncRepository.kt  SessionRepository.kt  SettingsRepository.kt
app/src/main/java/com/example/dndscribe/recording/: ActiveSessionState.kt  RecordingService.kt
app/src/main/java/com/example/dndscribe/ui/: MainScreen.kt  MainViewModel.kt
app/src/main/java/com/example/dndscribe/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/xml/: network_security_config.xml
gradle/: gradle-daemon-jvm.properties
server/: .gitignore  Dockerfile  README.md  pyproject.toml
server/src/dnd_scribe_server/: auth.py  chunking.py  embeddings.py  main.py  schemas.py  semantic.py  storage.py
